--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="modal">
-      <h2>Error!</h2>
+      <h2>blander mseee!</h2>
       <p id="modal-message"></p>
     </div>
 
